Fixed navbar issues with left and right white space

--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -3,6 +3,26 @@
     font-family: Helvetica, sans-serif;
   }
 
+/*********
+Navbar Styles
+**********/
+
+.navbar-static-top .container {
+  background-color: #3f51b5;
+  padding-right: 0; /*15px in bootstrap.css*/
+  padding-left: 0;  /*idem*/
+  margin-right: auto;
+  margin-left: auto;
+  border-color: #3f51b5;
+}
+
+.navbar-entire{
+  background-color: #3f51b5;
+}
+
+/**********
+Devise Alert styles
+***********/
 .alert-box {
   color:#555;
   border-radius:10px;
